# npc_jobs

./: .gitignore  README.md  pyproject.toml
scripts/: add_DRDG_sessions_to_qc.py  add_DRDG_sessions_to_sorting.py  run_small_jobs
scripts/hueys/: dynamicrouting_behavior_session_mtrain_upload.py
src/np_jobs/: __init__.py  utils.py
src/np_jobs/queues/sqlite_isilon/: __init__.py
src/np_queuey/: __init__.py  queues.py  types.py  utils.py
src/np_queuey/hueys/: dynamicrouting_behavior_session_mtrain_upload.py  sorting.py
src/np_queuey/jobs/: dynamicrouting_behavior_session_mtrain_upload.py  pipeline_sorting.py  run_small_jobs.py
src/np_queuey/queues/: __init__.py  huey_job_queue.py  peewee_job_queue.py  sqlite_isilon_queue.py
tests/: test_huey.py
