[tool.pdm]

[project]
name = "np_queuey"
version = "0.1.0"
description = "Tools for submitting and processing jobs through a message queue for Mindscope Neuropixels workflows."
authors = [
    {name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "huey>=2.4.5",
    "np-config>=0.4.17",
    "np-logging>=0.5.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"